Ath base commit

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -3,30 +3,39 @@ import Icon from './Icon.astro';
 ---
 
 <section class="box skills">
-	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+	<div class="stack gap-0.5 lg:gap-2">
+		<Icon icon="sun" color="var(--accent-regular)" size="1.5rem" />
+		<h2>Strong-willed</h2>
+		<p>I thrive on difficulty. Whether it’s mastering a new language, solving complex bugs, or pushing my limits, I stay focused, consistent, and relentless.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
+		<Icon icon="pencil-line" color="var(--accent-regular)" size="1.5rem"  />
+		<h2>Creative Thinker</h2>
+		<p>I bring ideas to life through design, code, and storytelling. I see patterns others miss and craft experiences that are both intuitive and original.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+		<Icon icon="strategy" color="var(--accent-regular)" size="1.5rem"  />
+		<h2>Analytical Problem Solver</h2>
+		<p>Every challenge is a puzzle. I break down complexity, ask the right questions, and find solutions that are simple, scalable, and smart.</p>
+	</div>
+	<div class="stack gap-2 lg:gap-4">
+		<Icon icon="rocket-launch" color="var(--accent-regular)" size="1.5rem"  />
+		<h2>Relentlessly Curious</h2>
+		<p>I learn fast, dig deep, and never stop improving. What drives me isn’t just finishing — it’s mastering, refining, and pushing beyond what’s expected.</p>
 	</div>
 </section>
 
+
 <style>
 	.box {
-		border: 1px solid var(--gray-800);
-		border-radius: 0.75rem;
-		padding: 1.5rem;
-		background-color: var(--gray-999_40);
-		box-shadow: var(--shadow-sm);
+	border: 1px solid var(--gray-100);
+	border-radius: 0.75rem;
+	padding: 1.5
+	
+	
+	rem;
+	background-color: hsla(var(--gray-100));
+	box-shadow: var(--shadow-sm);
 	}
 
 	.skills {
@@ -40,8 +49,9 @@ import Icon from './Icon.astro';
 	}
 
 	.skills p {
-		color: var(--gray-400);
+		color: var(--gray-999);
 	}
+
 
 	@media (min-width: 50em) {
 		.box {
