--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,22 +30,23 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, my name is Jeanine White"
-					tagline="I am a Creative Developer who is currently based in Portland, Oregon."
+					title="Hello, my name is Athénaïs Klapczynski"
+					tagline="I am a Full Stack Developer who is currently based in Rouen, France."
 					align="start"
 				>
 					<div class="roles">
 						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
+						<Pill><Icon icon="trophy" size="1.33em" /> Sportswoman</Pill>
+						<Pill><Icon icon="palette" size="1.33em" /> Artist</Pill>
 						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
 					</div>
 				</Hero>
 
 				<img
-					alt="Jeanine White smiling in a red plaid shirt and tortoise shell glasses"
+					alt="PicME"
 					width="480"
 					height="620"
-					src="/assets/portrait.jpg"
+					src="/assets/profilepic.jpg"
 				/>
 			</header>
 
@@ -187,7 +188,7 @@ const projects = (await getCollection('work'))
 		text-align: center;
 		max-width: 50ch;
 		font-size: var(--text-md);
-		color: var(--gray-300);
+		color: var(--gray-600);
 	}
 
 	.section-header h3 {
@@ -238,8 +239,8 @@ const projects = (await getCollection('work'))
 		text-align: center;
 		border: 1px solid var(--gray-800);
 		border-radius: 1.5rem;
-		color: var(--gray-300);
-		background: var(--gradient-subtle);
+		color: var(--gray-600);
+		background: var(--gray-600);
 		box-shadow: var(--shadow-sm);
 	}
 
