--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,6 +1,5 @@
 ---
 import Icon from './Icon.astro';
-import ThemeToggle from './ThemeToggle.astro';
 import type { iconPaths } from './IconPaths';
 
 /** Main menu items */
@@ -12,12 +11,7 @@ const textLinks: { label: string; href: string }[] = [
 
 /** Icon links to social media — edit these with links to your profiles! */
 const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[] = [
-	{ label: 'Twitter', href: 'https://twitter.com/me', icon: 'twitter-logo' },
-	{ label: 'Twitch', href: 'https://twitch.tv/me', icon: 'twitch-logo' },
 	{ label: 'GitHub', href: 'https://github.com/me', icon: 'github-logo' },
-	{ label: 'CodePen', href: 'https://codepen.io/me', icon: 'codepen-logo' },
-	{ label: 'dribbble', href: 'https://dribbble.com/me', icon: 'dribbble-logo' },
-	{ label: 'YouTube', href: 'https://www.youtube.com/@me/', icon: 'youtube-logo' },
 ];
 
 /** Test if a link is pointing to the current page. */
@@ -32,9 +26,9 @@ const isCurrentPage = (href: string) => {
 <nav>
 	<div class="menu-header">
 		<a href="/" class="site-title">
-			<Icon icon="terminal-window" color="var(--accent-regular)" size="1.6em" gradient />
-			Jeanine White
-		</a>
+			<img src="/assets/favicon.svg" alt="Logo" width="44" height="44" style="margin-right: 0.5rem;" />
+			Athénaïs
+		</a>		
 		<menu-button>
 			<template>
 				<button class="menu-button" aria-expanded="false">
@@ -93,10 +87,6 @@ const isCurrentPage = (href: string) => {
 						</a>
 					))
 				}
-			</div>
-
-			<div class="theme-toggle">
-				<ThemeToggle />
 			</div>
 		</div>
 	</div>
@@ -171,7 +161,7 @@ const isCurrentPage = (href: string) => {
 		border-radius: 999rem;
 		padding: 0.5rem;
 		font-size: 1.5rem;
-		color: var(--gray-300);
+		color: var(--gray-100);
 		background: radial-gradient(var(--gray-900), var(--gray-800) 150%);
 		box-shadow: var(--shadow-md);
 	}
@@ -217,7 +207,7 @@ const isCurrentPage = (href: string) => {
 
 	.link {
 		display: inline-block;
-		color: var(--gray-300);
+		color: var(--gray-200);
 		text-decoration: none;
 	}
 
@@ -250,7 +240,7 @@ const isCurrentPage = (href: string) => {
 		padding: var(--icon-padding);
 		text-decoration: none;
 		color: var(--accent-dark);
-		transition: color var(--theme-transition);
+		transition: color var(--gray-999);
 	}
 
 	.social:hover,
@@ -279,6 +269,7 @@ const isCurrentPage = (href: string) => {
 
 		.site-title {
 			font-size: var(--text-lg);
+			color: var(--gray-100)
 		}
 
 		.menu-content {
@@ -309,8 +300,8 @@ const isCurrentPage = (href: string) => {
 			padding: 0.5rem 1rem;
 			border-radius: 999rem;
 			transition:
-				color var(--theme-transition),
-				background-color var(--theme-transition);
+				color: var(--gray-100);
+				background-color var(--gray-100);
 		}
 
 		.link:hover,
@@ -320,8 +311,8 @@ const isCurrentPage = (href: string) => {
 		}
 
 		.link[aria-current='page'] {
-			color: var(--accent-text-over);
-			background-color: var(--accent-regular);
+			color: var(--gray-100);
+			background-color: var(--accent-dark);
 		}
 
 		.menu-footer {
