--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const currentYear = new Date().getFullYear();
 			Designed & Developed in Rouen with <a href="https://astro.build/">Astro</a>
 			<Icon icon="rocket-launch" size="1.2em" />
 		</p>
-		<p>&copy; {currentYear} Blue Beetle</p>
+		<p>&copy; {currentYear} Ath</p>
 	</div>
 	<p class="socials">
 		<a href="https://github.com/Kindroky">GitHub</a>
