--- a/src/components/Pill.astro
+++ b/src/components/Pill.astro
@@ -5,13 +5,13 @@
 		display: flex;
 		padding: 0.5rem 1rem;
 		gap: 0.5rem;
-		color: var(--accent-light);
+		color: var(--gray-50);
 		border: 1px solid var(--accent-regular);
 		background-color: var(--accent-regular);
 		border-radius: 999rem;
 		font-size: var(--text-md);
 		line-height: 1.35;
 		white-space: nowrap;
-		font-weight: 200;
+		font-weight: 400;
 	}
 </style>
