--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, my name is Athénaïs Klapczynski"
+					title="Athénaïs Klapczynski"
 					tagline="I am a Full Stack Developer who is currently based in Rouen, France."
 					align="start"
 				>
@@ -41,13 +41,10 @@ const projects = (await getCollection('work'))
 						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
 					</div>
 				</Hero>
-
-				<img
-					alt="PicME"
-					width="480"
-					height="620"
-					src="/assets/profilepic.jpg"
-				/>
+				<div class="image-wrapper">
+					<img src="/assets/profilepic.jpg" alt="Athénaïs" />
+					<div class="image-overlay"></div>
+				</div>
 			</header>
 
 			<Skills />
@@ -57,7 +54,9 @@ const projects = (await getCollection('work'))
 			<section class="section with-background with-cta">
 				<header class="section-header stack gap-2 lg:gap-4">
 					<h3>Selected Work</h3>
-					<p>Take a look below at some of my featured work for clients from the past few years.</p>
+					<p style="color: rgba(253, 194, 203, 0.918);">
+						Take a look below at some of my featured work for clients from the past few years.
+					</p>
 				</header>
 
 				<div class="gallery">
@@ -109,23 +108,42 @@ const projects = (await getCollection('work'))
 
 <style>
 	.hero {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		gap: 2rem;
+		position: relative;
 	}
 
 	.roles {
 		display: none;
 	}
 
-	.hero img {
-		aspect-ratio: 5 / 4;
+	.image-wrapper {
+	position: relative;
+	width: 360px;
+	height: 400px;
+	border-radius: 1.5rem;
+	overflow: hidden;
+}
+
+	.image-wrapper img {
+		width: 100%;
+		height: 85%;
 		object-fit: cover;
 		object-position: top;
 		border-radius: 1.5rem;
 		box-shadow: var(--shadow-md);
+		display: block;
+		margin-bottom: 30px;
 	}
+	
+	.image-overlay {
+		position: absolute;
+		inset: 0;
+		border-radius: 4.5rem;
+		background: linear-gradient(180deg, rgba(251, 120, 255, 0.158), rgba(85, 15, 102, 0.274));
+		z-index: 2;
+		pointer-events: none;
+		height: 85%;
+	}
+
 
 	@media (min-width: 50em) {
 		.hero {
