--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -6,10 +6,10 @@ import Icon from './Icon.astro';
 <aside class="contact-box">
 	<h2>Interested in working together?</h2>
 
-	<ul class="contact-info">
-		<li><strong>📧 Email : &nbsp</strong> <a href="mailto:athenais.klp@gmail.com">athenais.klp@gmail.com</a></li>
-		<li><strong>📱 Phone number : &nbsp</strong> <a href="tel:+33627240832">06 27 24 08 32</a></li>
-		<li><strong>🎂 Age : </strong> 19</li>
+	<ul class="contact-info" style="font-size: 20px">
+		<li><strong>Email : &nbsp</strong> <a href="mailto:athenais.klp@gmail.com">athenais.klp@gmail.com</a></li>
+		<li><strong>Phone number : &nbsp</strong> <a href="tel:+33627240832">06 27 24 08 32</a></li>
+		<li><strong>Age : </strong> 19</li>
 	</ul>
 
 	<CallToAction href="mailto:athenais.klp@gmail.com">
