--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -235,7 +235,7 @@ const isCurrentPage = (href: string) => {
 		display: flex;
 		flex-wrap: wrap;
 		gap: 0.625rem;
-		font-size: var(--icon-size);
+		font-size: 45px;
 	}
 
 	.social {
