--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -6,7 +6,7 @@ import Icon from './Icon.astro';
 <section class="box skills">
 	<div class="skill-item zig-up">
 		<div class="skill-title">
-			<Icon icon="sun" color="var(--accent-light)" size="3rem" />
+			<Icon icon="sun" color="rgb(173, 216, 230)" size="3rem" />
 			<h2>Strong-willed</h2>
 		</div>
 		<p>
@@ -17,7 +17,7 @@ import Icon from './Icon.astro';
 
 	<div class="skill-item zig-down">
 		<div class="skill-title">
-			<Icon icon="pencil-line" color="var(--accent-light)" size="3rem" />
+			<Icon icon="pencil-line" color="rgb(173, 216, 230)" size="3rem" />
 			<h2>Creative Thinker</h2>
 		</div>
 		<p>
@@ -28,7 +28,7 @@ import Icon from './Icon.astro';
 
 	<div class="skill-item zig-up">
 		<div class="skill-title">
-			<Icon icon="strategy" color="var(--accent-light)" size="3rem" />
+			<Icon icon="strategy" color="rgb(173, 216, 230)" size="3rem" />
 			<h2>Problem Solver</h2>
 		</div>
 		<p>
@@ -38,7 +38,7 @@ import Icon from './Icon.astro';
 
 	<div class="skill-item zig-down">
 		<div class="skill-title">
-			<Icon icon="rocket-launch" color="var(--accent-light)" size="3rem" />
+			<Icon icon="rocket-launch" color="rgb(173, 216, 230)" size="3rem" />
 			<h2>Curious</h2>
 		</div>
 		<p>
