--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -16,12 +16,12 @@ const { href } = Astro.props;
 	text-align: center;
 	padding: 0.56em 2em;
 	gap: 0.8em;
-	color: rgb(53, 14, 116);
+	color:rgba(253, 194, 203, 0.918) ;
 	text-decoration: none;
 	line-height: 1.1;
 	border-radius: 999rem;
 	overflow: hidden;
-	background: rgba(253, 194, 203, 0.918);
+	background: rgb(71, 21, 153);
 	box-shadow: var(--shadow-md);
 	white-space: nowrap;
 	transition: background-color 0.4s ease, box-shadow 0.3s ease, color 0.3s ease;
