--- a/src/components/PortfolioPreview.astro
+++ b/src/components/PortfolioPreview.astro
@@ -40,12 +40,12 @@ const { data, id } = Astro.props.project;
 		margin: 0.5rem;
 		padding: 0.5rem 1rem;
 		background: var(--gray-999);
-		color: var(--gray-200);
+		color: rgba(253, 194, 203, 0.918);
 		border-radius: 0.375rem;
 	}
 
 	img {
-		grid-area: 1 / 1 / 3 / 3;
+		grid-area: 1/ 1 / 3 / 3;
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
