--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -43,7 +43,7 @@ import Pill from '../components/Pill.astro';
 				<section class="skills-box">
 					<div class="grid-box">
 					<div class="grid-section">
-						<h2>🎓 Education</h2>
+						<h2>📖 Education</h2>
 						<ul class="edu-list">
 						<li><strong>2021 - 2024:</strong> Bachelor's at Sciences Po Paris</li>
 						<li><strong>Nov 2022:</strong> TOEFL iBT - English C2</li>
@@ -53,16 +53,19 @@ import Pill from '../components/Pill.astro';
 					</div>
 				
 					<div class="grid-section">
-						<h2>🖥️ Programming Languages</h2>
+						<h2> 💻 
+							
+							Programming Languages</h2>
 						<div class="pill-grid">
 						<span class="pill">Go</span>
 						<span class="pill">JavaScript</span>
+						<span class="pill">Node.js</span>
 						<span class="pill">HTML</span>
 						<span class="pill">CSS</span>
 						<span class="pill">Rust</span>
 						<span class="pill">Python</span>
 						<span class="pill">SQL</span>
-						<span class="pill">PostgreSQL</span>
+						<span class="pill">SQLite</span>
 						</div>
 					</div>
 					<div class="grid-section">
@@ -72,17 +75,18 @@ import Pill from '../components/Pill.astro';
 						<span class="pill">Gimp</span>
 						<span class="pill">Notion</span>
 						<span class="pill">Canva</span>
-						<span class="pill">Markdown</span>
+						<span class="pill">Notion</span>
 						</div>
 					</div>
 					<div class="grid-section">
 						<h2>🛠️ Programming Tools</h2>
 						<div class="pill-grid">
 						<span class="pill">Git</span>
+						<span class="pill">Github</span>						
 						<span class="pill">VS Code</span>
 						<span class="pill">Astro</span>
-						<span class="pill">SQLite</span>
-						<span class="pill">Node.js</span>
+						<span class="pill">PostgreSQL</span>
+						<span class="pill">Docker</span>
 						</div>
 					</div>
 				</section>
