--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -7,8 +7,8 @@ interface Props {
 }
 
 const {
-	title = 'Athénaïs: Personal Site',
-	description = 'The personal site of Athénaïs Klapczynski',
+	title = 'Athénaïs',
+	description = 'Personal site of Athénaïs Klapczynski',
 } = Astro.props;
 ---
 
