--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,7 +22,7 @@ import Pill from '../components/Pill.astro';
 					<br>
 					<br>
 					<p>
-						I grew up in a bicultural French and Russian world, filled with kindness, creativity and a deep curiosity. From an early age, I was drawn to learning—reading and writing fluently in kindergarten and later being identified as HPI (high intellectual potential) in primary school. This led me to skip two grades, and by the time I was nine, I entered a semi-professional rhythmic gymnastics center in Strasbourg, where my life became a cycle of discipline and competition, making me, at times, hate the sport I loved.
+						I grew up in a bicultural French and Russian world, filled with kindness, creativity and curiosity. From an early age, I was drawn to learning—reading and writing fluently in kindergarten and later being identified as HPI (high intellectual potential) in primary school. This led me to skip two grades, and by the time I was nine, I entered a semi-professional rhythmic gymnastics center in Strasbourg, where my life became a cycle of discipline and competition, making me, at times, hate the sport I loved.
 					</p>
 					<br>
 					<p>
@@ -34,7 +34,7 @@ import Pill from '../components/Pill.astro';
 					</p>
 					<br>
 					<p>
-						Six months ago, I also discovered a deep passion for League of Legends, drawn to its complexity and the endless room for mastery in strategical and mechanical skills. And after earning my Bachelor's degree, I knew I wanted to build something meaningful—something of my own. That’s what led me to programming. I chose Zone01 for its collaborative, hands-on approach—learning through doing, surrounded by people who are just as driven as I am.
+						Six months ago, I also discovered a passion for League of Legends, drawn to its complexity and the endless room for mastery in strategical and mechanical skills. And after earning my Bachelor's degree, I knew I wanted to build something meaningful—something of my own. That’s what led me to programming. I chose Zone01 for its collaborative, hands-on approach—learning through doing, surrounded by people who are just as driven as I am.
                     	Now, six months into this journey, I feel ready to take what I’ve learned—not just the technical skills, but the resilience, adaptability, and problem-solving mindset I’ve developed—and apply it to concrete projects. I want what I build to help other people.
 					</p>
 				</div>
@@ -45,10 +45,10 @@ import Pill from '../components/Pill.astro';
 					<div class="grid-section">
 						<h2>📖 Education</h2>
 						<ul class="edu-list">
-						<li><strong>2021 - 2024:</strong> Bachelor's at Sciences Po Paris</li>
-						<li><strong>Nov 2022:</strong> TOEFL iBT - English C2</li>
-						<li><strong>2023 - 2024:</strong> Exchange at Queen’s University</li>
-						<li><strong>2024 - 2027:</strong> RNCP 6 at Zone01 Rouen</li>
+						<li> 🎓 <strong>2021 - 2024:</strong> Bachelor's at Sciences Po Paris</li>
+						<li> 📝 <strong>Nov 2022:</strong> TOEFL iBT - English C2</li>
+						<li> 🌍 <strong>2023 - 2024:</strong> Exchange at Queen’s University</li>
+						<li> 💻<strong>2024 - 2027:</strong> RNCP 6 at Zone01 Rouen</li>
 						</ul>
 					</div>
 				
