--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const projects = (await getCollection('work'))
 					</div>
 				</Hero>
 				<div class="image-wrapper">
-					<img src="/assets/profilepic.jpg" alt="Athénaïs" />
+					<img src="/assets/profpic.png" alt="Athénaïs" />
 					<div class="image-overlay"></div>
 				</div>
 			</header>
@@ -139,8 +139,8 @@ const projects = (await getCollection('work'))
 						<span class="stat-label">Months of Boxing in Canada</span>
 					  </div>
 					  <div class="stat">
-						<span class="stat-number">Top 20%</span>
-						<span class="stat-label">Best LoL player in Europe</span>
+						<span class="stat-number">2</span>
+						<span class="stat-label">Years of LoL</span>
 					  </div>
 					</div>
 				  </div>
@@ -202,7 +202,7 @@ const projects = (await getCollection('work'))
 		position: absolute;
 		inset: 0;
 		border-radius: 4.5rem;
-		background: linear-gradient(180deg, rgba(251, 120, 255, 0.158), rgba(85, 15, 102, 0.274));
+		background: linear-gradient(180deg, rgba(251, 120, 255, 0.11), rgba(85, 15, 102, 0.171));
 		z-index: 2;
 		pointer-events: none;
 		height: 85%;
